--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Stars Wars</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   	<script type="text/javascript" src="assets/javascript/game.js"></script>
 </head>
@@ -14,5 +15,36 @@
 		<p>Star Wars RPG!</p>
 
 	</header>
+	<div class="container">
+
+		<div class="row">
+
+			<!--<div class="whtbx">
+
+				<p>BOX</p>
+
+			</div>
+
+			<div class="whtbx">
+
+				<p>BOX</p>
+
+			</div>
+
+			<div class="whtbx">
+
+				<p>BOX</p>
+
+			</div>
+
+			<div class="whtbx">
+
+				<p>BOX</p>
+
+			</div>-->
+
+		</div>
+
+	</div>
 </body>
 </html>
