Completed player subarrays.

--- a/index.html
+++ b/index.html
@@ -17,31 +17,19 @@
 	</header>
 	<div class="container">
 
-		<div class="row">
+		<div class="row" id="players">
 
-			<!--<div class="whtbx">
+		</div>
 
-				<p>BOX</p>
+		<div class="row play">
 
-			</div>
+			<p>Your Character</p>
 
-			<div class="whtbx">
+		</div>
 
-				<p>BOX</p>
+		<div class="row play">
 
-			</div>
-
-			<div class="whtbx">
-
-				<p>BOX</p>
-
-			</div>
-
-			<div class="whtbx">
-
-				<p>BOX</p>
-
-			</div>-->
+			<p>Enemies Available To Attack</p>
 
 		</div>
 
