Created function to determine placement of character div elements.

--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
 		<p>Star Wars RPG!</p>
 
 	</header>
+	
 	<div class="container">
 
 		<div class="row" id="players">
 
 		</div>
 
-		<div class="row play">
+		<div class="row play" id="user_char">
 
 			<p>Your Character</p>
 
 		</div>
 
-		<div class="row play">
+		<div class="row play" id="enemies">
 
 			<p>Enemies Available To Attack</p>
 
