Defender can now be chosen.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<p>Star Wars RPG!</p>
 
 	</header>
-	
+
 	<div class="container">
 
 		<div class="row" id="players">
@@ -31,6 +31,12 @@
 		<div class="row play" id="enemies">
 
 			<p>Enemies Available To Attack</p>
+
+		</div>
+
+		<div class="row play" id="defender">
+
+			<p>Defender</p>
 
 		</div>
 
