--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
 
 		</div>
 
+		<div class="row play" id="attack">
+
+			<p>Fight Section</p>
+
+			<div id="kill_kill">
+
+				ATTACK!
+
+			</div>
+
+		</div>
+
 		<div class="row play" id="defender">
 
 			<p>Defender</p>
